<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_read"
        android:icon="@drawable/ic_book_open"
        android:title="@string/read"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_cookbook"
        android:title="@string/edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_collaborators"
        android:title="@string/collaborators"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_leave_cookbook"
        android:title="@string/leave_collaboration"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>
