<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.recipebookpro.presentation.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.recipebookpro.presentation.ui.discover.DiscoverFragment"
        android:label="@string/nav_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/myKitchenFragment"
        android:name="com.recipebookpro.presentation.ui.kitchen.MyKitchenFragment"
        android:label="@string/nav_my_kitchen"
        tools:layout="@layout/fragment_my_kitchen" />

    <fragment
        android:id="@+id/plannerFragment"
        android:name="com.recipebookpro.presentation.ui.planner.PlannerFragment"
        android:label="@string/nav_planner"
        tools:layout="@layout/fragment_planner" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.recipebookpro.presentation.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.recipebookpro.presentation.ui.notification.NotificationFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>
